# python-uv-project-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
scripts/: Makefile  setup.py
src/: main.py
test/: test_main.py  test_uv_project_template.py
